Change cpublish and cpppublish to copenpublish and cppopenpublish

--- a/bindings/c/CMakeLists.txt
+++ b/bindings/c/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
 
-set(CPUBLISH_VERSION_MAJOR "0")
-set(CPUBLISH_VERSION_MINOR "1")
-set(CPUBLISH_VERSION_PATCH "0")
-set(CPUBLISH_VERSION ${CPUBLISH_VERSION_MAJOR}.${CPUBLISH_VERSION_MINOR}.${CPUBLISH_VERSION_PATCH})
+set(COPENPUBLISH_VERSION_MAJOR "0")
+set(COPENPUBLISH_VERSION_MINOR "1")
+set(COPENPUBLISH_VERSION_PATCH "0")
+set(COPENPUBLISH_VERSION ${COPENPUBLISH_VERSION_MAJOR}.${COPENPUBLISH_VERSION_MINOR}.${COPENPUBLISH_VERSION_PATCH})
 
-project(cpubilsh VERSION ${CPUBLISH_VERSION} LANGUAGES C)
+project(copenpubilsh VERSION ${COPENPUBLISH_VERSION} LANGUAGES C)
 
 # --------------------------------------------------------------------------------
 # Build Options
@@ -19,13 +19,13 @@ set(UNIT_TESTING OFF)
 
 add_subdirectory(corrosion)
 
-if (NOT DEFINED CPUBLISH_SOURCE_DIR OR CPUBLISH_SOURCE_DIR MATCHES "")
-set(CPUBLISH_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
+if (NOT DEFINED COPENPUBLISH_SOURCE_DIR OR COPENPUBLISH_SOURCE_DIR MATCHES "")
+set(COPENPUBLISH_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
 endif()
 
-corrosion_import_crate(MANIFEST_PATH "${CPUBLISH_SOURCE_DIR}/Cargo.toml")
+corrosion_import_crate(MANIFEST_PATH "${COPENPUBLISH_SOURCE_DIR}/Cargo.toml")
 
-if (BUILD_CPUBLISH_TESTS)
+if (BUILD_COPENPUBLISH_TESTS)
     enable_testing()
     add_subdirectory(cmocka)
     add_subdirectory(tests)
