--- a/bindings/c/pyproject.toml
+++ b/bindings/c/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "cpublish"
+name = "copenpublish"
 description = "A simple publish framework"
 authors = [{ name = "Scott Wilson", email = "scott@propersquid.com" }]
 license = { text = "MIT OR Apache-2.0" }
