--- a/bindings/cpp/CMakeLists.txt
+++ b/bindings/cpp/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
 
-set(CPPPUBLISH_VERSION_MAJOR "0")
-set(CPPPUBLISH_VERSION_MINOR "1")
-set(CPPPUBLISH_VERSION_PATCH "0")
-set(CPPPUBLISH_VERSION ${CPPPUBLISH_VERSION_MAJOR}.${CPPPUBLISH_VERSION_MINOR}.${CPPPUBLISH_VERSION_PATCH})
+set(CPPOPENPUBLISH_VERSION_MAJOR "0")
+set(CPPOPENPUBLISH_VERSION_MINOR "1")
+set(CPPOPENPUBLISH_VERSION_PATCH "0")
+set(CPPOPENPUBLISH_VERSION ${CPPOPENPUBLISH_VERSION_MAJOR}.${CPPOPENPUBLISH_VERSION_MINOR}.${CPPOPENPUBLISH_VERSION_PATCH})
 
-project(cpppublish VERSION ${CPPPUBLISH_VERSION} LANGUAGES CXX)
+project(cppopenpublish VERSION ${CPPOPENPUBLISH_VERSION} LANGUAGES CXX)
 
 # --------------------------------------------------------------------------------
 # Build Options
@@ -17,16 +17,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Do the build
 # --------------------------------------------------------------------------------
 set(PUBLISH_HEADERS
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/context_iter.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/context_view.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/context.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/core.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/publish.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/runner.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/status.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/value_iter.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/value_view.h
-    ${PROJECT_SOURCE_DIR}/include/cpppublish/value.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/context_iter.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/context_view.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/context.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/core.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/publish.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/runner.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/status.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/value_iter.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/value_view.h
+    ${PROJECT_SOURCE_DIR}/include/openpublish/value.h
 )
 set(PUBLISH_SRC
     ${PROJECT_SOURCE_DIR}/src/context_iter.cpp
@@ -46,8 +46,8 @@ add_library(${CMAKE_PROJECT_NAME}
     ${PUBLISH_SRC}
 )
 
-set(CPUBLISH_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../c)
-add_subdirectory(${PROJECT_SOURCE_DIR}/../c ${CMAKE_BINARY_DIR}/cpublish)
+set(COPENPUBLISH_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../c)
+add_subdirectory(${PROJECT_SOURCE_DIR}/../c ${CMAKE_BINARY_DIR}/openpublish)
 
 target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
     ${PROJECT_SOURCE_DIR}/include
@@ -55,12 +55,12 @@ target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
-target_link_libraries(${CMAKE_PROJECT_NAME} cpublish)
+target_link_libraries(${CMAKE_PROJECT_NAME} copenpublish)
 
-install(FILES ${PUBLISH_HEADERS} DESTINATION include/cpppublish)
-install(TARGETS ${CMAKE_PROJECT_NAME} EXPORT cpppublish DESTINATION lib)
+install(FILES ${PUBLISH_HEADERS} DESTINATION include/openpublish)
+install(TARGETS ${CMAKE_PROJECT_NAME} EXPORT ${PROJECT_NAME} DESTINATION lib)
 
-if (BUILD_CPPPUBLISH_TESTS)
+if (BUILD_CPPOPENPUBLISH_TESTS)
     enable_testing()
     add_subdirectory(googletest EXCLUDE_FROM_ALL)
     # For Windows: Prevent overriding the parent project's compiler/linker settings
