--- a/.github/workflows/test_suite_python.yml
+++ b/.github/workflows/test_suite_python.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Run Cargo Fmt
         run: cargo fmt --check
       - name: Run Cargo Deny
-        uses: EmbarkStudios/cargo-deny-action@v1
+        uses: EmbarkStudios/cargo-deny-action@v2
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Setup Python ${{matrix.python-version}}
         id: setup-python
@@ -78,8 +78,8 @@ jobs:
         run: python -m pip install .[test]
       - name: Lint with Ruff
         run: |
-          python -m ruff --output-format=github .
-      - name: Lint with Ruff
+          python -m ruff check --output-format=github .
+      - name: Format with Ruff
         run: |
           python -m ruff format --check .
       - name: Build Rust
