--- a/bindings/c/Cargo.toml
+++ b/bindings/c/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [lib]
-name = "openpublish"
+name = "copenpublish"
 crate-type = ["staticlib", "cdylib", "lib"]
 
 # [profile.release]
