--- a/bindings/cpp/CMakeLists.txt
+++ b/bindings/cpp/CMakeLists.txt
@@ -3,9 +3,14 @@ cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
 set(CPPOPENPUBLISH_VERSION_MAJOR "0")
 set(CPPOPENPUBLISH_VERSION_MINOR "1")
 set(CPPOPENPUBLISH_VERSION_PATCH "0")
-set(CPPOPENPUBLISH_VERSION ${CPPOPENPUBLISH_VERSION_MAJOR}.${CPPOPENPUBLISH_VERSION_MINOR}.${CPPOPENPUBLISH_VERSION_PATCH})
+set(CPPOPENPUBLISH_VERSION
+    ${CPPOPENPUBLISH_VERSION_MAJOR}.${CPPOPENPUBLISH_VERSION_MINOR}.${CPPOPENPUBLISH_VERSION_PATCH}
+)
 
-project(cppopenpublish VERSION ${CPPOPENPUBLISH_VERSION} LANGUAGES CXX)
+project(
+  cppopenpublish
+  VERSION ${CPPOPENPUBLISH_VERSION}
+  LANGUAGES CXX)
 
 # --------------------------------------------------------------------------------
 # Build Options
@@ -26,8 +31,7 @@ set(PUBLISH_HEADERS
     ${PROJECT_SOURCE_DIR}/include/openpublish/status.h
     ${PROJECT_SOURCE_DIR}/include/openpublish/value_iter.h
     ${PROJECT_SOURCE_DIR}/include/openpublish/value_view.h
-    ${PROJECT_SOURCE_DIR}/include/openpublish/value.h
-)
+    ${PROJECT_SOURCE_DIR}/include/openpublish/value.h)
 set(PUBLISH_SRC
     ${PROJECT_SOURCE_DIR}/src/context_iter.cpp
     ${PROJECT_SOURCE_DIR}/src/context_view.cpp
@@ -38,32 +42,33 @@ set(PUBLISH_SRC
     ${PROJECT_SOURCE_DIR}/src/status.cpp
     ${PROJECT_SOURCE_DIR}/src/value_iter.cpp
     ${PROJECT_SOURCE_DIR}/src/value_view.cpp
-    ${PROJECT_SOURCE_DIR}/src/value.cpp
-)
+    ${PROJECT_SOURCE_DIR}/src/value.cpp)
 
-add_library(${CMAKE_PROJECT_NAME}
-    ${PUBLISH_HEADERS}
-    ${PUBLISH_SRC}
-)
+add_library(${CMAKE_PROJECT_NAME} ${PUBLISH_HEADERS} ${PUBLISH_SRC})
 
 set(COPENPUBLISH_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../c)
-add_subdirectory(${PROJECT_SOURCE_DIR}/../c ${CMAKE_BINARY_DIR}/openpublish)
+add_subdirectory(${PROJECT_SOURCE_DIR}/../c ${CMAKE_BINARY_DIR}/copenpublish)
 
-target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
-    ${PROJECT_SOURCE_DIR}/include
-    ${PROJECT_SOURCE_DIR}/../c/include
-)
+target_include_directories(
+  ${CMAKE_PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include
+                               ${PROJECT_SOURCE_DIR}/../c/include)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(${CMAKE_PROJECT_NAME} copenpublish)
 
 install(FILES ${PUBLISH_HEADERS} DESTINATION include/openpublish)
-install(TARGETS ${CMAKE_PROJECT_NAME} EXPORT ${PROJECT_NAME} DESTINATION lib)
+install(
+  TARGETS ${CMAKE_PROJECT_NAME}
+  EXPORT ${PROJECT_NAME}
+  DESTINATION lib)
 
-if (BUILD_CPPOPENPUBLISH_TESTS)
-    enable_testing()
-    add_subdirectory(googletest EXCLUDE_FROM_ALL)
-    # For Windows: Prevent overriding the parent project's compiler/linker settings
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    add_subdirectory(tests)
+if(BUILD_CPPOPENPUBLISH_TESTS)
+  enable_testing()
+  add_subdirectory(googletest EXCLUDE_FROM_ALL)
+  # For Windows: Prevent overriding the parent project's compiler/linker
+  # settings
+  set(gtest_force_shared_crt
+      ON
+      CACHE BOOL "" FORCE)
+  add_subdirectory(tests)
 endif()
